--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,33 @@
 <html>
       <head>
+           <meta charset="utf-8">
+           <meta http-equiv="X-UA-Compatible" content="IE=edge">
+           <meta name="viewport" content="width=device-width, initial-scale=1">
+           <title>Download YouTube</title>
+
+    <!-- Bootstrap -->
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
       </head>
       <body>
-            <form method="post">
-                  <input type="url" name="url" placeholder="Enter url of YouTube video">
-                  <input type="submit" value="Download">
+        <div class="container" id="content-area">
+           <div class="row content"> 
+            <div class="col-md-8 col-md-offset-2">
+            <h1 class="center">Download small YouTube videos</h1>
+            <p class="lead center">Enter a valid YouTube video url and download the video to your browser. Large videos will timeout and fail to download</p>
+            <form method="post" class="form-inline center">
+                <div class="form-group center">
+                  <input type="url" name="url" class="formelem form-control" placeholder="Enter url of YouTube video" style="width:200px" required>
+                </div>
+                <div class="form-group center">
+                  <input type="submit" value ="Download" class="btn btn-success">
+                </div>
             </form>
-            <p style="color:red;">{{ error }}</p>
+            {% if error %}
+            <div class="alert alert-danger center" >{{ error }}</div>
+            {% endif %}
+            </div>
+         </div>
+        </div>
       </body>
 </html>
